scrollbar fixed

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -36,16 +36,17 @@ main {
 
 *::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
 	background-color: #f5f5f5;
 }
 
 *::-webkit-scrollbar {
-	width: 8px;
+	width: 10px;
 	background-color: #f5f5f5;
 }
 
 *::-webkit-scrollbar-thumb {
-	background-color: #4b4b4b;
-	border: 2px solid #4b4b4b;
-	border-radius: 15px;
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #555;
 }
